# seaorm-test

./: .env  Cargo.toml  schema.sql
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs  query_root.rs
crates/entities/: Cargo.toml
crates/entities/src/: author.rs  author_role.rs  lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231128_174222_add_role_field_to_author.rs
src/: main.rs  query_root.rs
src/entities/: authors.rs  mod.rs  post.rs  posts.rs  prelude.rs
src/models/: authors.rs  posts.rs
