[package]
name = "seaorm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.7", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-uuid",
    "with-chrono",
    "with-json",
    "macros",
] }
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.34.0"
uuid = "1.6.1"
anyhow = "1.0.75"
chrono = "0.4.31"
