[package]
name = "seaorm-test"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
entities = { path = "../entities" }
actix-web = { version = "4.3.1", default-features = false, features = [
    "macros",
] }
actix-http = { version = "3.4.0", default-features = true, features = [
    "http2",
] }
async-graphql-actix-web = { version = "6.0.11" }
async-graphql = { version = "6.0.11", features = [
    "decimal",
    "chrono",
    "dataloader",
    "dynamic-schema",
] }
async-trait = { version = "0.1.72" }
dotenv = "0.15.0"
sea-orm = { version = "0.12.0", features = [
    "sqlx-postgres",
    "seaography",
    "runtime-tokio-rustls",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
lazy_static = { version = "1.4.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = "1.6.1"
anyhow = "1.0.75"
chrono = "0.4.31"

[dependencies.seaography]
git = "https://github.com/SeaQL/seaography.git"
features = ["with-decimal", "with-chrono", "with-uuid"]
