[package]
name = "entities"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
async-graphql = { version = "5.0.10", features = [
    "decimal",
    "chrono",
    "dataloader",
    "dynamic-schema",
] }
async-trait = { version = "0.1.72" }
sea-orm = { version = "0.12.0", features = [
    "sqlx-postgres",
    "seaography",
    "runtime-tokio-rustls",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = "1.6.1"
chrono = "0.4.31"

[dependencies.seaography]
version = "1.0.0-rc.2"
features = ["with-decimal", "with-chrono", "with-uuid"]
